# ekb-reliability

./: .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml  requirements.txt
artifacts/archive_legacy/data/: classifier_metrics.json  processed_real_bom_results_v5.csv  real_bom_summary_v5.json  realistic_test_bom_usb_sensor_node_v5_results.csv  realistic_test_bom_usb_sensor_node_v5_summary.json  surrogate_metrics.json
data/demo_cases/: 01_smoke_sample.csv  02_realistic_canfd_logger.csv  03_review_challenge.csv  04_supervisor_multisheet_bom.xlsx
data/external_inputs/: real_components_bom_canfd_logger_main.csv
docs/: current_release_status.md  dataset_registry.md  demo_scenarios.md  mil_not_full_explained.md  mil_subset_scope.md  mil_system_level_scope.md  mil_traceability.md  release_cleanup_notes.md  surrogate_guardrails.md  tz_progress_matrix.md
models/: component_classifier_retrained.joblib  surrogate_regressor.joblib
src/ekb_reliability/: aggregation.py  backend_selection.py  bom.py  catalog.py  classification.py  config.py  exporting.py  features.py  fusion.py  normalization.py  pipeline.py  rules.py  schemas.py  search.py  taxonomy.py  utils.py
tests/: test_classifier_runtime.py  test_config_paths.py  test_dataset_audit.py  test_feature_extraction.py  test_mil_parts_count.py  test_mil_system_level.py  test_normalization.py  test_pipeline_options.py  test_pipeline_smoke.py  test_reliability.py  test_rules.py  test_storage_search.py  test_surrogate_guardrails.py  test_surrogate_integration.py  test_training_suite.py
(+37 files in other folders)
